crates/strider/tests/snapshots/v3__ppc64le__floats__f32_compare.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v6" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "5" -> "v6" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v7" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "5" -> "v7" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "9" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v6" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v7" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "9" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "10" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "13" -> "10" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "14" -> "10" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "15" -> "10" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "15" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="φ f1", shape=house, fillcolor="#163030"];
  "9" -> "14" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "16" -> "14" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "17" -> "14" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "17" -> "14" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "17" [label="bitcast\nf64 → u64", shape=box, fillcolor="#302018"];
  "18" -> "17" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "18" [label="FloatToFloat\nf32 → f64", shape=box, fillcolor="#302018"];
  "19" -> "18" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "19" [label="CastToFloat\nu32 → f32", shape=box, fillcolor="#302018"];
  "20" -> "19" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "20" [label="bitcast\nf32 → u32", shape=box, fillcolor="#302018"];
  "21" -> "20" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "21" [label="FloatToFloat\nf64 → f32", shape=box, fillcolor="#302018"];
  "22" -> "21" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "22" [label="CastToFloat\nu64 → f64", shape=box, fillcolor="#302018"];
  "15" -> "22" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "16" [label="bitcast\nf64 → u64", shape=box, fillcolor="#302018"];
  "23" -> "16" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "23" [label="FloatToFloat\nf32 → f64", shape=box, fillcolor="#302018"];
  "24" -> "23" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "24" [label="CastToFloat\nu32 → f32", shape=box, fillcolor="#302018"];
  "20" -> "24" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "13" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "25" -> "12" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "25" [label="φ Val", shape=house, fillcolor="#163030"];
  "9" -> "25" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "26" -> "25" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "27" -> "25" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "28" -> "25" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" [label="φ Mem", shape=house, fillcolor="#163030"];
  "9" -> "11" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "29" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "30" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "31" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "31" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "32" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "34" -> "31" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "33" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "35" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "36" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="const 0xfffffffffffffff4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "35" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "32" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "37" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "38" -> "32" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "20" -> "32" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "38" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "35" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "39" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0xffffffffffffffec:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "37" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "40" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" -> "37" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "42" -> "37" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "42" [label="bitcast\nf32 → u32", shape=box, fillcolor="#302018"];
  "43" -> "42" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "43" [label="FloatToFloat\nf64 → f32", shape=box, fillcolor="#302018"];
  "44" -> "43" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "44" [label="CastToFloat\nu64 → f64", shape=box, fillcolor="#302018"];
  "45" -> "44" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "45" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "41" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "35" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "46" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "46" [label="const 0xfffffffffffffff0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "40" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "30" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "32" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "30" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "48" -> "30" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "48" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "47" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "35" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="const 0xfffffffffffffff4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "29" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "32" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "29" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "51" -> "29" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "50" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "35" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "52" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="const 0xfffffffffffffff4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "8" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "53" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "53" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "54" -> "53" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "53" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "54" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "56" -> "54" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "54" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "56" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "58" -> "56" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "59" -> "56" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "59" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "60" -> "59" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "61" -> "59" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "62" -> "61" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "62" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "63" -> "62" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "63" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "64" -> "63" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "64" -> "63" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "64" [label="CastToFloat\nu64 → f64", shape=box, fillcolor="#302018"];
  "17" -> "64" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "60" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "65" -> "60" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "65" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "66" -> "65" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "66" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "67" -> "66" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "67" -> "66" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "67" [label="CastToFloat\nu64 → f64", shape=box, fillcolor="#302018"];
  "68" -> "67" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "68" [label="bitcast\nf64 → u64", shape=box, fillcolor="#302018"];
  "69" -> "68" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "69" [label="FloatToFloat\nf32 → f64", shape=box, fillcolor="#302018"];
  "70" -> "69" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "70" [label="CastToFloat\nu32 → f32", shape=box, fillcolor="#302018"];
  "42" -> "70" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "58" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "71" -> "58" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "72" -> "58" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "72" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "73" -> "72" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "74" -> "72" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "74" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "73" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "75" -> "73" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "75" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "67" -> "75" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "64" -> "75" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "71" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "76" -> "71" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "77" -> "71" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "77" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "78" -> "77" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "79" -> "77" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "79" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "78" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "80" -> "78" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "80" [label="Less\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "64" -> "80" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "67" -> "80" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "76" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "81" -> "76" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "82" -> "76" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "82" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "81" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "83" -> "81" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "83" [label="Less\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "67" -> "83" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "64" -> "83" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "4" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "84" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "84" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "85" -> "84" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "86" -> "84" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "86" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "85" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "87" -> "85" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "88" -> "85" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "88" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "87" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "89" -> "87" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "90" -> "87" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "90" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "91" -> "90" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "92" -> "90" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "92" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "93" -> "92" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "93" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "94" -> "93" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "94" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "95" -> "94" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "95" -> "94" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "95" [label="CastToFloat\nu64 → f64", shape=box, fillcolor="#302018"];
  "16" -> "95" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "91" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "96" -> "91" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "96" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "97" -> "96" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "97" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "98" -> "97" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "98" -> "97" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "98" [label="CastToFloat\nu64 → f64", shape=box, fillcolor="#302018"];
  "99" -> "98" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "99" [label="bitcast\nf64 → u64", shape=box, fillcolor="#302018"];
  "100" -> "99" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "100" [label="FloatToFloat\nf32 → f64", shape=box, fillcolor="#302018"];
  "101" -> "100" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "101" [label="CastToFloat\nu32 → f32", shape=box, fillcolor="#302018"];
  "42" -> "101" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "89" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "102" -> "89" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "103" -> "89" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "103" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "104" -> "103" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "105" -> "103" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "105" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "104" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "106" -> "104" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "106" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "98" -> "106" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "95" -> "106" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "102" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "107" -> "102" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "108" -> "102" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "108" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "109" -> "108" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "110" -> "108" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "110" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "109" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "111" -> "109" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "111" [label="Less\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "95" -> "111" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "98" -> "111" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "107" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "112" -> "107" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "113" -> "107" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "113" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "112" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "114" -> "112" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "114" [label="Less\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "98" -> "114" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "95" -> "114" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
}
